src/css/our-lessons.css
.section.lessons {
  padding-top: 64px;
  padding-bottom: 64px;
}

/* Section description under title */

.lessons .section-title-descr {
  font: var(--medium-font);
  color: rgba(var(--black), 0.5);
  text-align: center;
  font-size: 14px;
  line-height: 1.71;
  margin: 0 auto 40px;
}

/* Card list */

.lessons-list {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: var(--indent-x-32);
  margin: 0 auto;
  list-style: none;
  padding: 0;
}

/* Card */

.lessons-card {
  width: 100%;
  max-width: 320px;
  padding: 40px 20px;
  display: flex;
  flex-direction: column;
  border-radius: 30px;
  border: 1px solid var(--green);
  transition: box-shadow var(--transition);
}

.lessons-card:hover,
.lessons-card:focus {
  box-shadow:
    0 1px 6px rgba(46, 47, 66, 0.08),
    0 1px 1px rgba(46, 47, 66, 0.16),
    0 2px 1px rgba(46, 47, 66, 0.08);
}

/* Accent card (Standard) */

.lessons-card--accent {
  background-color: var(--green);
  color: var(--cl-white);
}

.lessons-card--accent .lessons-card__title {
  color: var(--cl-white);
}

.lessons-card--accent .lessons-card__price {
  color: var(--cl-white);
}

.lessons-card--accent .lessons-card__text {
  color: rgba(var(--white), 0.7);
}

/* Card content */

.lessons-card__title {
  color: var(--cl-black-rgb);
  text-align: center;
  font-size: 20px;
  font-weight: 700;
  line-height: 1.2;
  letter-spacing: -0.02em;
  margin-bottom: 16px;
}

.lessons-card__price {
  color: var(--cl-black-rgb);
  text-align: center;
  font-size: 32px;
  font-weight: 700;
  line-height: 1.13;
  letter-spacing: -0.02em;
  margin-bottom: 24px;
}

.lessons-card__text {
  font: var(--body-font);
  color: rgba(var(--black), 0.5);
  text-align: center;
  margin-bottom: 14px;
}

/* Card button */

.lessons-card__btn {
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 52px;
  padding: 14px;
  margin: auto;
  color: var(--cl-white);
}

.lessons-card__btn--inverted {
  border: 1px solid rgba(var(--white), 0.4);
}

.lessons-card__btn--inverted:hover,
.lessons-card__btn--inverted:focus {
  background-color: var(--cl-white);
  color: var(--green);
}

/* Tablet 768px */

@media screen and (min-width: 768px) {
  .lessons .section-title-descr {
    font-size: 18px;
    line-height: 1.67;
    margin-bottom: 64px;
  }

  .lessons-list {
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: flex-start;
  }

  .lessons-card {
    width: 336px;
    padding: 32px 16px;
  }

  .lessons-card__price {
    margin-bottom: 32px;
  }

  .lessons-card__text {
    font-size: 16px;
    line-height: 1.5;
    margin-bottom: 20px;
  }
}

/* Desktop 1280px  */

@media screen and (min-width: 1280px) {
  .lessons .section-title-descr {
    max-width: 665px;
    font-size: 18px;
    line-height: 1.66;
    margin: 0 auto 64px;
  }

  .lessons-list {
    flex-wrap: nowrap;
    justify-content: center;
  }

  .lessons-card {
    width: 320px;
    padding: 32px;
  }

  .lessons-card__price {
    margin-bottom: 16px;
  }

  .lessons-card__text {
    margin-bottom: 16px;
    max-width: 255px;
    margin-left: auto;
    margin-right: auto;
  }
}

